<resources>
    <string name="app_name">ArchitectureComponent</string>
    <string name="action_settings">Settings</string>
    <string name="word_label">Word</string>
    <string name="hint_word">Word..</string>
    <string name="meaning_label">Meaning</string>
    <string name="hint_meaning">Meaning..</string>
    <string name="btn_save_label">SAVE</string>
    <string name="btn_delete_label">DELETE</string>
    <string name="empty_word_not_saved">Empty word not saved</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>
